# ent/migrate/schema.go
@@ -196,11 +196,6 @@ var (
 		{Name: "creado_en", Type: field.TypeTime},
 		{Name: "actualizado_en", Type: field.TypeTime},
 		{Name: "nombre", Type: field.TypeString, Size: 150},
-		{Name: "documento_fiscal", Type: field.TypeString, Nullable: true, Size: 50},
-		{Name: "correo", Type: field.TypeString, Nullable: true, Size: 150},
-		{Name: "telefono", Type: field.TypeString, Nullable: true, Size: 30},
-		{Name: "direccion", Type: field.TypeString, Nullable: true, Size: 255},
-		{Name: "ciudad", Type: field.TypeString, Nullable: true, Size: 120},
 		{Name: "pais", Type: field.TypeString, Nullable: true, Size: 2},
 		{Name: "moneda", Type: field.TypeString, Size: 3, Default: "PEN"},
 		{Name: "maximo_usuarios", Type: field.TypeInt, Default: 1},
@@ -216,11 +211,6 @@ var (
 				Name:    "empresa_nombre",
 				Unique:  false,
 				Columns: []*schema.Column{EmpresasColumns[3]},
-			},
-			{
-				Name:    "empresa_documento_fiscal",
-				Unique:  true,
-				Columns: []*schema.Column{EmpresasColumns[4]},
 			},
 		},
 	}
@@ -599,10 +589,7 @@ var (
 		{Name: "id", Type: field.TypeInt, Increment: true},
 		{Name: "creado_en", Type: field.TypeTime},
 		{Name: "actualizado_en", Type: field.TypeTime},
-		{Name: "nombres", Type: field.TypeString, Size: 120},
-		{Name: "apellidos", Type: field.TypeString, Nullable: true, Size: 120},
-		{Name: "correo", Type: field.TypeString, Unique: true, Size: 150},
-		{Name: "telefono", Type: field.TypeString, Nullable: true, Size: 30},
+		{Name: "usuario", Type: field.TypeString, Unique: true, Size: 120},
 		{Name: "hash_contrasena", Type: field.TypeString, Size: 255},
 		{Name: "estado", Type: field.TypeEnum, Enums: []string{"activo", "inactivo", "bloqueado"}, Default: "activo"},
 		{Name: "ultimo_acceso", Type: field.TypeTime, Nullable: true},
